// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-theme-secondary-900 opacity-60 dark:bg-black dark:opacity-80"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 bGiJfU absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2.5xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 lpqSIM w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative space-y-4"
      >
        <div
          class="flex-1"
        >
          <form
            class="space-y-8"
            data-testid="SignMessage"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <section
                  class="space-y-8"
                >
                  <div
                    class="flex justify-between items-end bg-theme-background"
                  >
                    <div
                      class="space-y-4"
                    >
                      <h1
                        class="mb-0 text-3xl"
                        data-testid="header__title"
                      >
                        Sign Message
                      </h1>
                      <div
                        class="text-theme-secondary-text"
                        data-testid="header__subtitle"
                      >
                        Provide a message below and sign with your mnemonic passphrase.
                      </div>
                    </div>
                  </div>
                  <fieldset
                    class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="signatory-address"
                    >
                      Signatory
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 bPzSMW"
                      disabled=""
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                            title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                          />
                        </div>
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full font-semibold text-theme-secondary-text"
                          data-testid="Input"
                          disabled=""
                          name="signatory-address"
                          value="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SignMessage__message-input"
                          name="message"
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="mnemonic"
                    >
                      Mnemonic
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SignMessage__mnemonic-input"
                          name="mnemonic"
                          type="password"
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <button
                            class="relative flex items-center justify-center w-full h-full text-2xl focus:outline-none group"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="absolute inset-0 -m-2 rounded ring-theme-primary-400 group-focus:ring-2"
                            />
                            <div
                              class="sc-bdfBwQ fPrsah"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </section>
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 hsoUax"
                  data-testid="SignMessage__cancel-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 blpaPr"
                  data-testid="SignMessage__submit-button"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Sign
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render for ledger wallets 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-theme-secondary-900 opacity-60 dark:bg-black dark:opacity-80"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 bGiJfU absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2.5xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 lpqSIM w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative space-y-4"
      >
        <div
          class="flex-1"
        >
          <form
            class="space-y-8"
            data-testid="SignMessage"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <section
                  class="space-y-8"
                >
                  <div
                    class="flex justify-between items-end bg-theme-background"
                  >
                    <div
                      class="space-y-4"
                    >
                      <h1
                        class="mb-0 text-3xl"
                        data-testid="header__title"
                      >
                        Sign Message
                      </h1>
                      <div
                        class="text-theme-secondary-text"
                        data-testid="header__subtitle"
                      >
                        Provide a message below and sign with your ledger.
                      </div>
                    </div>
                  </div>
                  <fieldset
                    class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="signatory-address"
                    >
                      Signatory
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 bPzSMW"
                      disabled=""
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 khDjUE"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                            title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                          />
                        </div>
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full font-semibold text-theme-secondary-text"
                          data-testid="Input"
                          disabled=""
                          name="signatory-address"
                          value="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                      <div
                        class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                        data-testid="FormLabel__required"
                      />
                    </label>
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SignMessage__message-input"
                          name="message"
                        />
                      </div>
                    </div>
                  </fieldset>
                </section>
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 hsoUax"
                  data-testid="SignMessage__cancel-button"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 blpaPr"
                  data-testid="SignMessage__submit-button"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Sign
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage should render signed step with wallet alias 1`] = `
<div>
  <section>
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Message Successfully Signed
        </h1>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ekYoCX undefined no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Signatory
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="inline-flex items-center no-ligatures"
          >
            <span
              class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
              data-testid="address__wallet-name"
            >
              <span
                class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                data-testid="TruncateEnd"
              >
                my-alias
              </span>
            </span>
            <span
              class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
              data-testid="address__wallet-address"
            >
              DLMm5AiKSX…J8mQ6MqjCv
            </span>
          </div>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"45\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"60\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
            title="DLMm5AiKSXobaV6YFcUboPZVJ8mQ6MqjCv"
          />
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp text-lg break-all no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Message
        </div>
        <div
          class="font-semibold"
        >
          Hello World
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 ByQkj undefined no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Signature
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="Input__InputWrapperStyled-wu99qs-0 bozrWZ mt-2 py-4"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <textarea
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="TextArea"
                name="signature"
                style="height: 4px;"
                wrap="hard"
              >
                {"message":"Hello World","signatory":"0360e26c8ab14e1bebf4d5f36ab16dcefc9e7b9d9e000ae2470397eccdf1280f6f","signature":"b9791983a2b2b529dad23e0798cf4df30b3880f4fda5f4587f1c3171f02d0c9f4491f8c6d3e76b5cd2e2fd11c9fdcc7958e77d1f19c1b57a55e9c99ed1e6a2b1"}
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
